# PaintByNumbers

./: .gitignore  CMakeLists.txt  README  imgui.ini
include/glad/: gl.h  glad.h
include/imgui/: imgui.h
resources/shaders/: happyMistake.frag  happyMistake.vert  keymaker.frag  kmean.frag  quantizer.frag  quantizer.vert  segmentGenerator.frag  smoother.frag  splice.frag  splice.vert
resources/textures/: Charlie R Resume.docx  test.tga
src/: main.cpp
src/headers/: ImVec_overrides.h  constants.h  glWrap.cpp  glWrap.h  gui.cpp  gui.h  opengl.h  proghandler.cpp  proghandler.h  quantizer.cpp  quantizer.h  timer.cpp  timer.h
tools/: install_linux.sh  install_windows.bat
